allow users with role superadmin to see hidden patients in list of patients, hide from all other users, styled <tr> to differentiate between normal and hidden patients

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -21,6 +21,10 @@
  * @license http://www.gnu.org/licenses/gpl-3.0.html The GNU General Public License V3.0
  */
 
+tr.accounthidden {
+    opacity:0.5;
+}
+
 h1, h2{
 	color: #0066cc;
 }
