Card #451 - Patient Feedback rendering in other div to avoid showing dialog

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -552,3 +552,6 @@ section article.conversation .dull, section article.message .dull, .dull{
 .js-feedback-recipients {
     width: 257px;
 }
+
+.screenshot {
+}
