--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -533,6 +533,7 @@ section article.conversation .dull, section article.message .dull, .dull{
 
 #feedbackModal {
     border: 1px solid #000;
+    display: none;
 }
 
 #feedbackModal form {
@@ -541,17 +542,30 @@ section article.conversation .dull, section article.message .dull, .dull{
     margin: 0px;
 }
 
-.js-feedback-message {
+#js-feedback-message {
     height: 150px;
     width: 248px;
 }
 
-.js-feedback-subject {
+#js-feedback-subject {
     width: 252px;
 }
-.js-feedback-recipients {
+#js-feedback-recipient {
     width: 257px;
 }
 
-.screenshot {
+#feedbackModal {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    margin-left:-150px;
+    width: 300px;
+    z-index: 10;
+}
+
+.hider {
+    opacity:0;
+    position:absolute;
+    top:0px;
+    left:0px;
 }
