Card #451 - Patient Feedback fixed -> absolute, removed header title from screenshot

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -555,7 +555,7 @@ section article.conversation .dull, section article.message .dull, .dull{
 }
 
 #feedbackModal {
-    position: fixed;
+    position: absolute;
     top: 20px;
     left: 50%;
     margin-left:-150px;
