--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -532,8 +532,11 @@ section article.conversation .dull, section article.message .dull, .dull{
 }
 
 #feedbackModal {
-    border: 1px solid #000;
+    border: 1px solid #999;
     display: none;
+    -webkit-box-shadow: 0px 0px 28px 0px rgba(50, 50, 50, 0.47);
+    -moz-box-shadow:    0px 0px 28px 0px rgba(50, 50, 50, 0.47);
+    box-shadow:         0px 0px 28px 0px rgba(50, 50, 50, 0.47);
 }
 
 #feedbackModal form, #js-feedback-success, #js-feedback-loading{
