--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -52,6 +52,10 @@ h3{
     margin-bottom: 15px;
 }
 
+.maincontainer {
+    background-color: #ffffff;
+}
+
 .navbar-inner{
 	background: #0066cc;
     filter: none;
