--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -50,6 +50,10 @@ h2.title {
     font-size: 20px;
 }
 
+h4.author {
+    padding-bottom: 10px;
+}
+
 h3{
     font-size: 15px;
     line-height: 20px;
