Sharing Thoughts initial js for sharedThought.js for adding responders

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -619,3 +619,8 @@ section article.conversation .dull, section article.message .dull, .dull{
     position: relative;
     top: 5px;
 }
+
+#selectOtherSharedThoughtResponders {
+    margin-bottom: 0px;
+}
+
