Sharing Thoughts added data-userId to remove link (for use when removing, not added yet

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -624,3 +624,6 @@ section article.conversation .dull, section article.message .dull, .dull{
     margin-bottom: 0px;
 }
 
+td.tdUserSharedThought {
+    width: 70px;
+}
