Sharing Thoughts initial comments box

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -627,3 +627,7 @@ section article.conversation .dull, section article.message .dull, .dull{
 td.tdUserSharedThought {
     width: 70px;
 }
+
+#textareaComment {
+    width: 690px;
+}
