Sharing Thoughts conversation support added

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -628,6 +628,7 @@ td.tdUserSharedThought {
     width: 70px;
 }
 
-#textareaComment {
-    width: 690px;
+#textareaMessage {
+    width: 555px;
+    margin-bottom: 0;
 }
