Sharing Thoughts changed tick/cross to span (removed font and big) set in main.css, fixed unit staff creation with sharedThoughtResponder

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -633,6 +633,18 @@ td.tdUserSharedThought {
     margin-bottom: 0;
 }
 
+.yesTick, .noCross {
+    font-size: 20px;
+}
+
+.yesTick {
+    color: #008000;
+}
+
+.noCross {
+    color: #8b0000;
+}
+
 form {
     margin: 0;
 }
