--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -648,3 +648,11 @@ td.tdUserSharedThought {
 form {
     margin: 0;
 }
+
+div.previousNext {
+    font-weight: bold;
+    float: left;
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: #0088CC;
+}
