--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -679,6 +679,7 @@ select[name="tableSharedThoughts_length"] {
      margin-right: 5px;
  }
 
-.paginate_enabled_previous:hover, .paginate_enabled_next:hover{
+.paginate_enabled_previous:hover, .paginate_enabled_next:hover,
+th.sorting:hover, th.sorting_asc:hover, th.sorting_desc:hover{
      cursor: pointer;
  }
