--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -448,7 +448,17 @@ h3{
 }
 
 /** MESSAGES **/
+#tableConversations_length, #tableConversations_filter{
+    display: none;
+}
 
+#tableConversations_info{
+    margin-top:10px;
+}
+
+#tableConversations{
+
+}
 
 section article.conversation, section article.message{
     /*padding:18px 18px;*/
@@ -462,7 +472,7 @@ section article.conversation.odd{
 
 section article.conversation .badge, section article.message .badge{
     position:relative;
-    top:-15px;
+    top:-5px;
 }
 
 section article.message{
@@ -618,4 +628,8 @@ section article.conversation .dull, section article.message .dull, .dull{
 #selectConversationStatus {
     position: relative;
     top: 5px;
+}
+
+table.tableInvisible{
+    width: 100%;
 }
