Sharing Thoughts added audit (sharedthought_audit table)

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -767,3 +767,17 @@ table.tableInvisible{
     margin: 18px 0;
     padding-bottom: 17px;
 }
+
+/* audit event table */
+td.auditDate {
+    width: 110px;
+}
+td.auditAction {
+
+}
+td.auditUser {
+
+}
+div#tableAuditEvents_length, div#tableAuditEvents_filter {
+    display:none;
+}
