Sharing Thoughts admin thought list styling

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -675,6 +675,8 @@ div.previousNext {
     color: #0088CC;
 }
 
+/* sharing thoughts */
+
 input.btn-success-sharingthoughts, input.btn-primary-sharingthoughts
 , input.btn-danger-sharingthoughts, input.btn-sharingthoughts {
     height: 40px;
