Sharing Thoughts shared thought admins can now open/close shared thoughts (sharedthought.closed = true/false)

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -788,3 +788,7 @@ div#tablePartialThoughts_length,
 div#tablePartialThoughts_filter {
     display: none;
 }
+
+td.sharedThoughtClosed {
+    text-align: center;
+}
