--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -861,3 +861,7 @@ td.td-buttons form{
     float:right;
     margin-left: 10px;
 }
+
+.nav-pills > li > a.link-sharingthoughts{
+    color:#0066cc;
+}
