Card #442 admin home, added status column

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -674,6 +674,14 @@ td.tdUserSharedThought {
     margin-bottom: 0;
 }
 
+.td-closed {
+    color: #ae0000;
+}
+
+.td-open {
+    color: #008000;
+}
+
 .yesTick, .noCross {
     font-size: 20px;
 }
