Card #442 sharing thoughts top link colour changed to same red as message notification

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -871,7 +871,7 @@ td.td-buttons form{
 }
 
 .nav-pills > li > a.link-sharingthoughts{
-    color:#0066cc;
+    color:#B94A48;
 }
 
 .error-required {
