Card #16 - hid never show me again, all buttons grey, updated wording, style

--- a/patientview-parent/patientview/src/main/webapp/css/main.css
+++ b/patientview-parent/patientview/src/main/webapp/css/main.css
@@ -877,3 +877,16 @@ td.td-buttons form{
 .error-required {
     color: red;
 }
+
+.submitLink {
+    background-color: transparent;
+    text-decoration: none;
+    border: none;
+    color: #08c;
+    cursor: pointer;
+    padding: 0;
+}
+.submitLink:hover {
+    text-decoration: underline;
+    color: #005580;
+}
